tests/valid-gd-scripts/newlineless_class_recursive.gd
class X:
	class Y:
		tool