tests/invalid-gd-scripts/recursive_tool.gd
class X:
	@tool
	# c1
	# c2
	signal sss
class Y:
	# c1
	# c2
	@tool
	signal sss
@tool
